--- a/requirements-mac.txt
+++ b/requirements-mac.txt
@@ -1,19 +1,19 @@
-lxml==4.9.2
-pyquery==1.4.1
-# cloudscraper==1.2.71
-requests==2.24.0
-beautifulsoup4==4.9.3
-Pillow==9.4.0
+lxml
+pyquery
+cloudscraper
+requests
+beautifulsoup4
+Pillow
 # 5.15.6 stuck on m1 Ventura 13.5, 5.15.10 is fine
-PyQt5==5.15.10
-PySocks==1.7.1
-urllib3==1.25.11
-zhconv==1.4.3
-langid==1.1.6
-opencv-contrib-python-headless==4.7.0.68
-deepl-translate==1.2.0
-ping3==4.0.4
-oshash==0.1.1
-numpy==1.26.4
-curl-cffi==0.6.0b9
+PyQt5
+PySocks
+urllib3
+zhconv
+langid
+opencv-contrib-python-headless
+deepl-translate
+ping3
+oshash
+numpy
+curl-cffi
 AppKit
